Before my meeting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>Hello</div>
 
-    <script src="introToJs.js"></script>
+    <script src="Day1.js"></script>
+    <script src="Day2.js"></script>
 </body>
 </html>
