--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <script src="Day1.js"></script>
     <script src="Day2.js"></script>
     <script src="Day3.js"></script>
+    <script src="Day4.js"></script>
+
 </body>
 </html>
