--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js By Scrimba</title>
+    <link rel="stylesheet" href="cssVariables.css">
 </head>
 <body>
     <div>Hello</div>
-
+    <header>
+        <nav id="navbar">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>my awesome portfolio</h1>
+        <div class="grid">
+            <div class="item">
+                <h1>project a</h1>
+                <button>learn more</button>
+            </div>
+            <div class="item">
+                <h1>project b</h1>
+                <button>learn more</button>
+            </div>
+            <div class="item">
+                <h1>project c</h1>
+                <button>learn more</button>
+            </div>
+            <div class="item done">
+                <h1>project d</h1>
+                <button>learn more</button>
+            </div>
+        </div>
+    </main>
+    <footer><p>Made with ☕ in Norway</p></footer>
     <script src="Day1.js"></script>
     <script src="Day2.js"></script>
     <script src="Day3.js"></script>
